--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,8 @@ readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[package.metadata.docs.rs]
+all-features = true
+
 [dependencies]
 serde = { version = "1", features = ["derive"], optional = true }
