--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v5
       - run: rustup update ${{ matrix.toolchain }}
       - run: rustup default ${{ matrix.toolchain }}
-      - run: cargo check --all
+      - run: cargo check --workspace
 
   test:
     name: Test Suite
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v5
       - run: rustup update ${{ matrix.toolchain }}
       - run: rustup default ${{ matrix.toolchain }}
-      - run: cargo test --all
+      - run: cargo test --workspace
 
   lints:
     name: Lints
@@ -42,4 +42,4 @@ jobs:
       - run: rustup default ${{ matrix.toolchain }}
       - run: rustup component add rustfmt clippy
       - run: cargo fmt --all -- --check
-      - run: cargo clippy --all -- -D warnings
+      - run: cargo clippy --workspace -- -D warnings
